Updated referral API backend to POST request
Changed query logic to currently just returning the package
information
