# backend/referral/models/__init__.py
@@ -5,6 +5,6 @@ from __future__ import absolute_import
 # import models into model package
 from models.api_error import ApiError
 from models.application import Application
-from models.matching_item import MatchingItem
-from models.query_result import QueryResult
+from models.referral_item import ReferralItem
+from models.referral_result import ReferralResult
 from models.app_info import AppInfo
