# backend/referral/models/referral_item.py
@@ -11,7 +11,7 @@ from models.base_model_ import Model
 from common import util
 
 
-class MatchingItem(Model):
+class ReferralItem(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -39,13 +39,13 @@ class MatchingItem(Model):
         self._score = score
 
     @classmethod
-    def from_dict(cls, dikt) -> 'MatchingItem':
+    def from_dict(cls, dikt) -> 'ReferralItem':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
         :return: The MatchingItem of this MatchingItem.  # noqa: E501
-        :rtype: MatchingItem
+        :rtype: ReferralItem
         """
         return util.deserialize_model(dikt, cls)
 
