# backend/referral/models/referral_result.py
@@ -10,20 +10,20 @@ from models.base_model_ import Model
 from common import util
 
 
-class QueryResult(Model):
+class ReferralResult(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
-    def __init__(self, result: List[MatchingItem]=None):  # noqa: E501
+    def __init__(self, result: List[ReferralItem]=None):  # noqa: E501
         """QueryResult - a model defined in Swagger
 
         :param result: The result of this QueryResult.  # noqa: E501
-        :type result: List[MatchingItem]
+        :type result: List[ReferralItem]
         """
         self.swagger_types = {
-            'result': List[MatchingItem]
+            'result': List[ReferralItem]
         }
 
         self.attribute_map = {
@@ -33,33 +33,33 @@ class QueryResult(Model):
         self._result = result
 
     @classmethod
-    def from_dict(cls, dikt) -> 'QueryResult':
+    def from_dict(cls, dikt) -> 'ReferralResult':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
         :return: The QueryResult of this QueryResult.  # noqa: E501
-        :rtype: QueryResult
+        :rtype: ReferralResult
         """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def result(self) -> List[MatchingItem]:
+    def result(self) -> List[ReferralItem]:
         """Gets the result of this QueryResult.
 
 
         :return: The result of this QueryResult.
-        :rtype: List[MatchingItem]
+        :rtype: List[ReferralItem]
         """
         return self._result
 
     @result.setter
-    def result(self, result: List[MatchingItem]):
+    def result(self, result: List[ReferralItem]):
         """Sets the result of this QueryResult.
 
 
         :param result: The result of this QueryResult.
-        :type result: List[MatchingItem]
+        :type result: List[ReferralItem]
         """
 
         self._result = result
